Closed Bug 332114 Opened 19 years ago Closed 19 years ago

XULRunner shouldn't build xpcomobsolete

Categories

(Toolkit Graveyard :: XULRunner, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: benjamin, Assigned: benjamin)

References

Details

Attachments

(1 file)

XULRunner doesn't need xpcomobsolete any more, so I want to disable it. Firefox still uses nsIRegistry in one location, but I'm planning on replacing that with raw NSReg calls.
Attachment #216638 - Flags: first-review?(darin)
Comment on attachment 216638 [details] [diff] [review] XULRunner without xpcomobsolete, rev. 1 nice
Attachment #216638 - Flags: first-review?(darin) → first-review+
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Blocks: 333874
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: