Bug 332114 - XULRunner shouldn't build xpcomobsolete, r=darin